20070408 code: cleaned up alloc.c and added alloc_zero().
20070409 code: API changes for hashtable. cleanups.
20070409 code: syserr updated to allow eight string arguments instead of six.
20070416 code: updated hashtable interface ht_callback to take key and keylen
               parameters.
20070427 code: library should now no longer leak implementation details,
               allowing the client code to be compiled with a different
               compiler than the library was compiled with, reliably.
20070427 code: seperated fixed sized integer functions into seperate
               integers package.
20070428 code: fixed scan_u*b() undefined behaviour.
20070430 code: sig now uses ANSI C sa_handler prototype.
20070501 code: fd_seek now uses off_t.
20070501 package: sd_*.h and _sd*.h are now no longer installed, to prevent
                  any possibility of header collisions.
20070502 code: added array_index_ub() and array_size_ub() for io_poll
               library. second argument of array_cat() is now const.
20070504 code: IRIX mipspro fixes.
20070506 code: renamed set_alloc() functions to alloc_set_alloc() etc.
20070506 version: corelib 0.54
20070510 code: added fmt_pad functions.
20070519 code: removed dstring_cat0 and redundant if statement from dstring_0.
20070519 version: corelib 0.541
20070525 code: added dgetline.
20070525 code: added sgetline_size and sgetline_data.
20070527 code: added signed fmt_* equivalents. 'unsigned' filenames were
               renamed to 'signed' filenames and now unsigned and signed
               variants of functions reside in these new filenames. for
               example, fmt_ulong.c was renamed to fmt_long.c and now
               both fmt_ulong and fmt_long are defined in this file.
20070527 code: added signed scan_* equivalents, as with fmt.
20070527 code: rewrote all fmt tests.
20070527 version: corelib 0.55
20070528 code: signed variants of fmt_pad, using common macro core in
               fmt_pad.h