@@ -1,13 +1,11 @@
-scan_charset.o
-scan_double.o
-scan_float.o
-scan_ncharset.o
-scan_newline.o
-scan_space.o
 scan_char.o
 scan_charb.o
 scan_charo.o
+scan_chars.o
+scan_charsn.o
 scan_charx.o
+scan_double.o
+scan_float.o
 scan_int.o
 scan_intb.o
 scan_into.o
@@ -21,7 +19,11 @@ scan_longb.o
 scan_longb.o
 scan_longo.o
 scan_longx.o
+scan_nchars.o
+scan_ncharsn.o
+scan_newline.o
 scan_short.o
 scan_shortb.o
 scan_shorto.o
 scan_shortx.o
+scan_space.o
