@@ -278,3 +278,4 @@
 20070527 version: corelib 0.55
 20070528 code: signed variants of fmt_pad, using common macro core in
                fmt_pad.h
+20070601 code: added scan_charsetn() and scan_notcharsetn().
